--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ td{
     left:5em;
     display: inline;
 	width: 85%;
-	height: 50%;
+	height: 25em;
 	background-color: white;
 	border-radius: 4px;
 }
